# agentic_commute_planner

./: .gitignore  ARCHITECTURE.md  LANGGRAPH_ARCHITECTURE.md  LICENSE  docker-compose.yml
database/: sample_data.sql
database/migrations/: 001_add_oauth_support.sql  001_initial_setup.sql  002_functions_and_triggers.sql  003_timezone_awareness.sql
database/schemas/: init.sql
infrastructure/docker/: docker-compose.prod.yml
services/ai-service/: Dockerfile  main.py  pyproject.toml  requirements.txt
services/ai-service/agents/: __init__.py  ai_calendar_analyzer.py  ai_commute_optimizer.py  ai_meeting_classifier.py  ai_office_decision_maker.py  ai_recommendation_presenter.py  commute_optimizer_agent.py  meeting_classifier_agent.py  office_presence_validator_agent.py  option_presenter_agent.py  schedule_analyzer_agent.py
services/ai-service/api/routes/: health.py  jobs.py
services/ai-service/config/: llm_config.py  mock_llm.py  settings.py
services/ai-service/graphs/: __init__.py  commute_workflow.py  langgraph_workflow.py  workflow_orchestrator.py
services/ai-service/models/: workflow_state.py
services/ai-service/services/: backend_service.py  database_service.py  redis_service.py
services/ai-service/tools/: __init__.py  google_calendar_mock.py  google_maps_mock.py
services/ai-service/utils/: event_normalizer.py  user_context.py
services/ai-service/workers/: __init__.py  job_worker.py
services/backend/: Dockerfile  go.mod  gqlgen.yml  schema.graphql  wait-for-postgres.sh
services/frontend/: Dockerfile  package.json
services/gateway/: .env.example  (+2 more)
(+39 files in other folders)
